<resources>
	<string name="app_name">圆环</string>
    <string name="login_btn_text">登录</string>
    <string name="register_btn_text">注册</string>
    <string name="look_password_btn_text">忘记密码？</string>
    <string name="login_internet_site_text">www.weipaidai.com</string>
    <string name="register_get_captcha_btn_text">获取验证码</string>
    <string name="reg_account_next_btn_text">下一步</string>
    <string name="reg_account_commit_btn_text">提交</string>
    <string name="reg_account_know_btn_text">知道了</string>
    <string name="reg_account_done_btn_text">完成</string>
    <string name="bid_btn_text">投标</string>
    <string name="reg_account_set_password_rule">密码，6~16位字母、数字与符号</string>
    <string name="reg_account_set_repeat_password">再次输入密码</string>
    <string name="reg_account_set_invite_phone">推荐人手机号(可跳过)</string>
    <string name="account_change_password_rule">新密码，6~16位字母、数字与符号</string>
    <string name="account_change_repeat_password">再次输入密码</string>
    <string name="account_change_original_password">原密码</string>
    <string name="reg_account_real_name">真实姓名</string>
    <string name="reg_account_id_number">身份证号</string>
    <string name="reg_account_email_address">邮箱认证</string>
    <string name="skip_text">跳过</string>
    <string name="common_title_all_text">全部</string>
    <string name="home_page_notification_text">客官，您久等了！9月28日微拍贷安卓版APP内测！</string>
    <string name="home_page_calender_text">2015.05.07</string>
    <string name="home_page_day_income_digit_text">0.00</string>
    <string name="home_page_day_income_text">昨日收益(元)</string>
    <string name="home_page_sum_income_digit_text">0.00</string>
    <string name="home_page_sum_income_text">累计收益(元)</string>
    <string name="home_page_my_account_text">我的账户</string>
    <string name="home_page_debit_text">借贷</string>
    <string name="home_page_biao_text">散标</string>
    <string name="home_page_wei_text">微计划系列</string>
    <string name="home_page_company_intro_text">公司介绍</string>
    <string name="user_account_name">18521060536</string>
    <string name="user_wei_money_text">微币</string>
    <string name="user_wei_money_digit">0</string>
    <string name="user_point_text">积分</string>
    <string name="user_point_digit">5825</string>
    <string name="my_finance_tab_text">资金详情</string>
    <string name="debit_account_tab_text">借款账户</string>
    <string name="account_manager_tab_text">账户管理</string>
    <string name="year_interest_digit_wei_bao">8.8</string>
    <string name="year_interest_unit_wei_page">%</string>
    <string name="year_interest_digit_wei_six">11.6</string>
    <string name="year_interest_digit_wei_year">14</string>
    <string name="year_interest_text">预期年化收益率</string>
    <string name="wei_detail_holiday_cautions_text">节假日顺延</string>
    <string name="wei_bid_btn_text">立即投标</string>
    <string name="fianance_tab_savings_digit_text">1,582.85</string>
    <string name="finance_tab_savings_text">存钱罐余额</string>
    <string name="finance_tab_available_amount_digit">12,200.00</string>
    <string name="finance_tab_available_amount_text">可用金额</string>
    <string name="finance_tab_freeze_amount_digit">-1,200.00</string>
    <string name="finance_tab_freeze_amount_text">冻结金额(元)</string>
    <string name="finance_tab_recharge_text">充值</string>
    <string name="finance_tab_withdraw_text">提现</string>
    <string name="debit_tab_account_text">借款账户</string>
    <string name="debit_tab_amount_text">待还总金额</string>
    <string name="debit_tab_amount_digit">0.00</string>
    <string name="debit_tab_amount_unit">元</string>
    <string name="debit_type_ye">业</string>
    <string name="debit_type_xin">薪</string>
    <string name="debit_type_jie">揭</string>
    <string name="principal_pay_txt">待还本金</string>
    <string name="interest_pay_txt">待还利息/管理费</string>
    <string name="late_fee_txt">逾期费用</string>
    <string name="finance_title_text">理财</string>
    <string name="wei_plan_tab_text">微计划</string>
    <string name="finance_tab_text">散标投资</string>
    <string name="finance_name">微+宝</string>
    <string name="credit_grade">信用等级</string>
    <string name="finance_amount_txt">借款金额：</string>
    <string name="finance_amount">100000元</string>
    <string name="finance_rate_txt">年利率：</string>
    <string name="finance_rate">14.80%</string>
    <string name="payment_time_limit_txt">还款期限：</string>
    <string name="payment_time_limit">3月</string>
    <string name="ensure_type_txt">保障类型：</string>
    <string name="ensure_type">本息保障</string>
    <string name="detail_payment_time_limit_txt">还款期限</string>
    <string name="detail_payment_time_limit">3月</string>
    <string name="detail_amount_txt">借款金额(元)</string>
    <string name="detail_amount">10000</string>
    <string name="detail_amount_scale_txt">可售金额(元)</string>
    <string name="detail_amount_scale">10000</string>
    <string name="detail_dead_line">截至2015年07月03日</string>
    <string name="detail_lighting">按月等额本息还款</string>
    <string name="detail_min_amount">起投金额100元</string>
    <string name="detail_ensure_type">本息保障</string>
    <string name="detail_max_amount">最大可投1000元</string>
    <string name="detail_product_introduction">产品介绍</string>
    <string name="detail_finance_agreement">理财协议</string>
    <string name="detail_finance_record">投标记录</string>
    <string name="detail_security_sina">新浪支付正式托管微拍贷风险备用金账户</string>
    <string name="finance_record_sum_text">共</string>
    <string name="finance_record_sum_digit">150</string>
    <string name="finance_record_sum_unit">人</string>
    <string name="finance_record_user_phone">159****386</string>
    <string name="finance_record_amount">50000元</string>
    <string name="finance_record_date">2015-07-15 17:51:09</string>
    <string name="message_content_text">注册成功，送红包100元...</string>
    <string name="message_time_text">2015-06-29 00:07:01</string>
    <string name="message_delete_button_text">删除</string>
    <string name="message_cancel_button_text">取消</string>
    <string name="message_detail_title_text">注册成功</string>
    <string name="message_detail_content_text">恭喜您注册成功，现接到合作的第三方支付平台通知，新浪支付平台，建设银行支付将于7月19日00：30-05：00
进行系统升级维护，期间无法处理充值和提现事宜。。。</string>
    <string name="company_intro_text"> “微拍贷”是上海佩辉金融信息服务有限公司旗下的一家全方位、个性化的互联网信贷平台。凭借强大的企业背景、坚实的研发技术和风控
管理为有资金需求的借款人和有理财需求的出借人搭建了一个轻松、便捷、安全、透明的网络互动P2P平台。个人借款人在网上发布借款请求，通过信用评估后，获得出借人的信用借款资金支持。 “微拍贷”
服务宗旨：灵活的用户体验、便捷的网络操作，实现丰厚信用价值，使借款人和出借人获得经济收益和精神回报双重收获。</string>
    <string name="company_copyright_text">2015 微拍贷 All rights reserved 上海佩辉金融信息服务有限公司</string>
    <string name="company_copyright_number">沪ICP备15015610</string>
    <string name="company_web_site_text">官方网址</string>
    <string name="company_web_site">www.weipaidai.com</string>
    <string name="company_micro_blog_text">官方微博</string>
    <string name="company_micro_blog">微拍贷</string>
    <string name="company_wechat_text">官方微信</string>
    <string name="company_wechat">weipaidai</string>
    <string name="company_customer_service_text">客服电话</string>
    <string name="company_customer_service">400-8878288</string>
    <string name="company_partners_text">合作伙伴</string>
    <string name="bid_state_all_text">全部</string>
    <string name="bid_state_bidding_text">投标中</string>
    <string name="bid_state_paying_text">还款中</string>
    <string name="bid_state_full_text">已满标</string>
    <string name="bid_interest_year_unit">%</string>
    <string name="bid_detail_bid_type">业</string>
    <string name="bid_detail_bid_level">AA</string>
    <string name="bid_detail_interest_text">%年化收益率</string>
    <string name="bid_detail_amount_text">标的总额</string>
    <string name="bid_detail_remaining_digit">6,200元</string>
    <string name="bid_detail_remaining_text">剩余金额</string>
    <string name="bid_detail_remaining_time">56时1分22秒</string>
    <string name="bid_detail_remaining_time_text">剩余时间</string>
    <string name="bid_detail_average_capical">到期本息</string>
    <string name="bid_detail_start_amount">起投金额100元</string>
    <string name="bid_detail_lock_time">锁定12个月</string>
    <string name="bid_detail_late_time">节假日顺延</string>
    <string name="bid_detail_title_text">标的详情</string>
    <string name="bid_detail_data_audit">资料审核</string>
    <string name="bid_detail_description_title">借款描述</string>
    <string name="bid_detail_description">客户为宁波本地人，当地有房产，家庭稳定性强，企业经营有数年，经营情况良好，提供流水走账及现场考察反映经营尚可，征信及网查无不良记录，还款情况良好。</string>
    <string name="bid_detail_user_info_title">用户信息</string>
    <string name="bid_detail_debit_user_title">借款人</string>
    <string name="bid_detail_debit_user">李**</string>
    <string name="bid_detail_marriage_title">婚姻</string>
    <string name="bid_detail_marriage">离异</string>
    <string name="bid_detail_household_title">户籍</string>
    <string name="bid_detail_household">宁波</string>
    <string name="bid_detail_complain_title">涉诉情况</string>
    <string name="bid_detail_complain">无</string>
    <string name="bid_detail_credit_record_title">征信记录</string>
    <string name="bid_detail_credit_record">正常</string>
    <string name="bid_detail_sex_title">性别</string>
    <string name="bid_detail_sex">女</string>
    <string name="bid_detail_age_title">年龄</string>
    <string name="bid_detail_age">44</string>
    <string name="bid_detail_education_title">学历</string>
    <string name="bid_detail_education">大专</string>
    <string name="bid_detail_house_title">房产</string>
    <string name="bid_detail_house">有</string>
    <string name="bid_detail_data_type_title">资料类型</string>
    <string name="bid_detail_data_amount_title">上传数量</string>
    <string name="bid_detail_audit_state_title">状态</string>
    <string name="real_name_auth_title">实名认证</string>
    <string name="real_name_auth_null">未认证</string>
    <string name="user_phone_number_title">手机号码</string>
    <string name="user_phone_auth_null">未认证</string>
    <string name="email_auth_title">邮箱认证</string>
    <string name="email_auth_null">未认证</string>
    <string name="pay_password_title">交易密码</string>
    <string name="user_login_password_title">登录密码</string>
    <string name="user_info_change">修改</string>
    <string name="user_guesture_password_title">手势密码</string>
    <string name="user_guesture_password_change">修改手势密码</string>
    <string name="trade_pwd_auth_state">未设置</string>
    <string name="set_succeed_tips">设置成功</string>
    <string name="set_failed_tips">设置失败</string>
    <string name="set_trade_password_text">设置6位数字交易密码</string>
    <string name="set_trade_password_again_text">再次输入交易密码</string>
    <string name="set_trade_password_tip">如果您操作有疑问，拨打客服电话400-8878288</string>
    <string name="old_trade_password_text">输入原交易密码，完成身份验证</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="security_card_text">安全卡</string>
    <string name="card_account_name_title">开户人姓名</string>
    <string name="card_account_name">李*</string>
    <string name="card_cmb_name">招商银行</string>
    <string name="card_number_title">银行卡号</string>
    <string name="card_number_hint">输入银行卡号</string>
    <string name="cooperate_bank_text">合作银行</string>
    <string name="choose_bank_title">选择银行</string>
    <string name="email_auth_dialog_title">验证链接已发送至</string>
    <string name="email_auth_noti">为了您的账号安全，请在24小时点击该链接 </string>
    <string name="email_change_dialog_title">您修改的邮箱为</string>
    <string name="email_change_via_mail">通过原邮箱</string>
    <string name="email_change_via_phone">通过手机号</string>
    <string name="auth_phone_tip_text">短信验证将默认发送至</string>
    <string name="set_gesture_title">设置手势密码以保障账户安全</string>
    <string name="set_gesture_tip">最少连接四个点</string>
    <string name="set_gesture_tip_again">再输入一次手势密码</string>
    <string name="set_gesture_pattern_tip">手势密码设置后将默认开启</string>
    <string name="account_left_brakets">(</string>
    <string name="account_right_brakets">)</string>
    <string name="withdraw_amount_text">提现金额(元)</string>
    <string name="withdraw_amount_more">输入金额</string>
    <string name="withdraw_fee_text">提现费用(元)</string>
    <string name="withdraw_default_amount">0</string>
    <string name="pay_amount_text">实际支付(元)</string>
</resources>