<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circle="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/right"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" >

                <com.shoneworn.circlemenu.circleview.CircleLayout
                    android:id="@+id/main_circle_layout"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    circle:firstChildPosition="South"
                    circle:isRotating="true"
                    circle:rotateToCenter="false" >

                    <!-- circle:circleBackground="@drawable/green"  > -->

                    <com.shoneworn.circlemenu.circleview.CircleImageView
                        android:id="@+id/account_layBtn0"
                        circle:name="@string/home_page_my_account_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/account_layImg"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/homepage_me_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/home_page_my_account_text"
                            android:textSize="@dimen/home_page_turnplate_text_size" />
                    </com.shoneworn.circlemenu.circleview.CircleImageView>

                    <com.shoneworn.circlemenu.circleview.CircleImageView
                        android:id="@+id/debit_layBtn1"
                        circle:name="@string/home_page_debit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/debit_layImg"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/homepage_loan_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/home_page_debit_text"
                            android:textSize="@dimen/home_page_turnplate_text_size" />
                    </com.shoneworn.circlemenu.circleview.CircleImageView>

                    <com.shoneworn.circlemenu.circleview.CircleImageView
                        android:id="@+id/biao_layBtn2"
                        circle:name="@string/home_page_biao_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/biao_layImg"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/homepage_biao_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/home_page_biao_text"
                            android:textSize="@dimen/home_page_turnplate_text_size" />
                    </com.shoneworn.circlemenu.circleview.CircleImageView>

                    <com.shoneworn.circlemenu.circleview.CircleImageView
                        android:id="@+id/wei_layBtn3"
                        circle:name="@string/home_page_wei_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/wei_layImg"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/homepage_wei_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/home_page_wei_text"
                            android:textSize="@dimen/home_page_turnplate_text_size" />
                    </com.shoneworn.circlemenu.circleview.CircleImageView>

                    <com.shoneworn.circlemenu.circleview.CircleImageView
                        android:id="@+id/company_intro_layBtn4"
                        circle:name="@string/home_page_company_intro_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/company_intro_layImg"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:src="@drawable/homepage_introduction_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/home_page_company_intro_text"
                            android:textSize="@dimen/home_page_turnplate_text_size" />
                    </com.shoneworn.circlemenu.circleview.CircleImageView>
                </com.shoneworn.circlemenu.circleview.CircleLayout>

                <RelativeLayout
                    android:id="@+id/relbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" >

                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/homepage_logo" />
                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>